#19 finished on mobile issues

--- a/style.css
+++ b/style.css
@@ -1,7 +1,34 @@
-html {
-    margin: 0px;
+html,
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: Times;
 }
 
+#wrapper {
+    min-height: 100%;
+    position: relative;
+}
+
+#header {
+    background-image: url("images/header.jpg");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 150px;
+    background-position: center;
+
+}
+
+#content {}
+
+#footer {
+    width: 100%;
+    height: 400px;
+    position: relative;
+    background-image: url("images/footer_water.jpg");
+    background-repeat: no-repeat;
+}
 a.ui-link {
     color: black;
 }
@@ -95,15 +122,19 @@ button.navbar-toggle {
     left: 45px;
     background-color: #6CF;
 }
+
 a#link1 {
     color: black;
 }
+
 a#link2 {
     color: black;
 }
+
 a#link3 {
     color: black;
 }
+
 a.link.ui-link {
     color: black;
 }
@@ -122,6 +153,7 @@ a.final.ui-link {
     padding: 10px;
     right: 5px;
 }
+
 a.final {
     border-radius: 10px;
     margin-top: 10px;
@@ -132,6 +164,7 @@ a.final {
     padding: 10px;
     right: 5px;
 }
+
 a.final:hover {
     text-decoration: none;
     color: white;
@@ -139,9 +172,20 @@ a.final:hover {
 }
 
 .resume > span:hover {
-background-color: black;
-padding: 10px;
-font-weight: bold;
-color: white;
-border-radius: 10px;
+    background-color: black;
+    padding: 10px;
+    font-weight: bold;
+    color: white;
+    border-radius: 10px;
+}
+
+@media screen and (max-width: 699px) and (min-width: 520px) {
+    #footer {
+        position: relative;
+        right: 25px;
+        height: 400px;
+    position: relative;
+    background-image: url("images/footer_water.jpg");
+    background-repeat: no-repeat;
+    }
 }
